// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders colored progress bar 1`] = `
<View
  accessibilityRole="progressbar"
  accessibilityState={
    Object {
      "busy": true,
    }
  }
  accessibilityValue={
    Object {
      "max": 100,
      "min": 0,
      "now": 20,
    }
  }
  accessible={true}
  onLayout={[Function]}
>
  <View
    collapsable={false}
    style={
      Object {
        "backgroundColor": "rgba(255, 0, 0, 0.38)",
        "height": 4,
        "opacity": 0,
        "overflow": "hidden",
      }
    }
  >
    <View
      collapsable={false}
      style={
        Object {
          "backgroundColor": "red",
          "flex": 1,
          "transform": Array [
            Object {
              "translateX": -50,
            },
            Object {
              "scaleX": 0.0001,
            },
          ],
          "width": 100,
        }
      }
    />
  </View>
</View>
`;

exports[`renders hidden progress bar 1`] = `
<View
  accessibilityRole="progressbar"
  accessibilityState={
    Object {
      "busy": false,
    }
  }
  accessibilityValue={
    Object {
      "max": 100,
      "min": 0,
      "now": 20,
    }
  }
  accessible={true}
  onLayout={[Function]}
>
  <View
    collapsable={false}
    style={
      Object {
        "backgroundColor": "rgba(103, 80, 164, 0.38)",
        "height": 4,
        "opacity": 0,
        "overflow": "hidden",
      }
    }
  >
    <View
      collapsable={false}
      style={
        Object {
          "backgroundColor": "rgba(103, 80, 164, 1)",
          "flex": 1,
          "transform": Array [
            Object {
              "translateX": -50,
            },
            Object {
              "scaleX": 0.0001,
            },
          ],
          "width": 100,
        }
      }
    />
  </View>
</View>
`;

exports[`renders indeterminate progress bar 1`] = `
<View
  accessibilityRole="progressbar"
  accessibilityState={
    Object {
      "busy": true,
    }
  }
  accessibilityValue={Object {}}
  accessible={true}
  onLayout={[Function]}
>
  <View
    collapsable={false}
    style={
      Object {
        "backgroundColor": "rgba(103, 80, 164, 0.38)",
        "height": 4,
        "opacity": 0,
        "overflow": "hidden",
      }
    }
  >
    <View
      collapsable={false}
      style={
        Object {
          "backgroundColor": "rgba(103, 80, 164, 1)",
          "flex": 1,
          "transform": Array [
            Object {
              "translateX": -50,
            },
            Object {
              "scaleX": 0.0001,
            },
          ],
          "width": 100,
        }
      }
    />
  </View>
</View>
`;

exports[`renders progress bar with specific progress 1`] = `
<View
  accessibilityRole="progressbar"
  accessibilityState={
    Object {
      "busy": true,
    }
  }
  accessibilityValue={
    Object {
      "max": 100,
      "min": 0,
      "now": 20,
    }
  }
  accessible={true}
  onLayout={[Function]}
>
  <View
    collapsable={false}
    style={
      Object {
        "backgroundColor": "rgba(103, 80, 164, 0.38)",
        "height": 4,
        "opacity": 0,
        "overflow": "hidden",
      }
    }
  >
    <View
      collapsable={false}
      style={
        Object {
          "backgroundColor": "rgba(103, 80, 164, 1)",
          "flex": 1,
          "transform": Array [
            Object {
              "translateX": -50,
            },
            Object {
              "scaleX": 0.0001,
            },
          ],
          "width": 100,
        }
      }
    />
  </View>
</View>
`;
